2012-05-23  Tobias Burnus  <burnus@net-b.de>

PR fortran/51055
        PR fortran/45170
        * match.c (gfc_match_allocate): Set length_from_typespec
        for characters.
        * resolve.c (resolve_charlen): If set, don't check whether
        the len is a specification expression.

2012-05-23  Tobias Burnus  <burnus@net-b.de>

        PR fortran/51055
        PR fortran/45170
        * gfortran.dg/allocate_with_typespec_6.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@187811 138bc75d-0d04-0410-961f-82ee72b054a4